# docs/swagger.json
@@ -363,6 +363,56 @@
                 }
             }
         },
+        "/api/v1/param/search/{id}": {
+            "get": {
+                "description": "Возвращает список компонентов, для которых параметр с данным ID является их собственным, а не унаследованным",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "2. Модельный каталог: Параметры"
+                ],
+                "summary": "Получить компоненты по ID параметра",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID Параметра",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/configurator_internal_dto.ComponentDto"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный формат ID",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка базы данных",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/param/unattached": {
             "get": {
                 "description": "Возвращает список всех параметров, которые не привязаны ни к одной составной части устройства",
@@ -629,56 +679,6 @@
                     },
                     "400": {
                         "description": "Ошибка валидации JSON",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Ошибка базы данных",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/relation/search/{id}": {
-            "get": {
-                "description": "Возвращает список компонентов, для которых параметр с данным ID является их собственным, а не унаследованным",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "3. Модельный каталог: Связи"
-                ],
-                "summary": "Получить компоненты по ID параметра",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID Параметра",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/configurator_internal_dto.ComponentDto"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Неверный формат ID",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
